2006-05-02  Chenthill Palanisamy  <pchenthill@novell.com>

	Committing change pointed by Li Yuan <Li.Yuan@Sun.COM>	
	
	* gui/e-calendar-table.c: (e_calendar_table_delete_selected): Corrected
	argument passed to delete_component_dialog while deleting multiple
	tasks.	

2006-04-27  Tor Lillqvist  <tml@novell.com>

	* gui/e-day-view-main-item.c
	(e_day_view_main_item_draw_long_events_in_vbars): Fix crash:
	Should use a GdkColor struct as such here, not a pointer.

	* gui/dialogs/event-editor.c (event_editor_init): Construct
	pathname to query-free-busy.png at run-time. Fixes Win32 build
	broken by the fix for #321832 below.

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Fixes bug #328194

	* gui/dialogs/calendar-setup.c: Added mnemonics.

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #331510 from Victor
	
	* gui/cal-search-bar.h: Added a new flag for Memo Search
	* gui/e-memos.c: (setup_widgets): Initiate memo search.

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>

	** Patch from PR Suman to add icons missing in menu items.

	* gui/tasks-control.c: (tasks_control_activate): Added icon for
	forward task.

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>

	** Patch from PR Suman to add icons missing in menu items.

	* gui/dialogs/comp-editor.c: Added Attach icon to menu.
	* gui/dialogs/event-editor.c: Added free/busy and recurrence icons.

2006-04-26  Srinivasa Ragavan  <sragavan@novell.com>
	
	Cairo Updates from Rajeev. Now it draws a solid border around the
	event.

	* gui/e-day-view-main-item.c:
	(e_day_view_main_item_draw_day_event):
	* gui/e-day-view-top-item.c: (e_day_view_top_item_draw_long_event):
	* gui/e-week-view-event-item.c: (e_week_view_event_item_draw):

2006-04-24  Srinivasa Ragavan  <sragavan@novell.com>

	Cairo support for Calendar (Rajeev Ramanathan)
	
	* gui/apps_evolution_calendar.schemas.in.in: Added key for
	transparency control.
	* gui/e-calendar-view.c: (draw_curved_rectangle): A common code for